force-app/main/default/objects/Crm_Service_Usage__c/fields/Crm_Service__c.field-meta.xml
<CustomField>
    <fullName>Crm_Service__c</fullName>
    <label>Crm Service</label>
    <referenceTo>Crm_Service__c</referenceTo>
    <relationshipLabel>Crm Service Usages</relationshipLabel>
    <relationshipName>Crm_Service_Usages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>