force-app/main/default/objects/Crm_Service_Usage__c/fields/Is_Archieved__c.field-meta.xml
<CustomField>
    <fullName>Is_Archieved__c</fullName>
    <formula>IF(ADDMONTHS(TODAY() ,-12) &lt;  DATEVALUE(CreatedDate), true, false )</formula>
    <label>Is Archieved</label>
    <type>Checkbox</type>
</CustomField>