force-app/main/default/objects/Crm_Service_Usage__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>