force-app/main/default/objects/Crm_Service_Usage__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Crm_Service_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>