force-app/main/default/objects/Crm_Service_Usage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Crm_Service__c</columns>
    <columns>Is_Archieved__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request__c</columns>
    <columns>Requester__c</columns>
    <columns>Response__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>